修改本地化文本表述

--- a/i18n/zh-cn.yaml
+++ b/i18n/zh-cn.yaml
@@ -57,7 +57,7 @@ search:
         other: 输入关键词...
 
     resultTitle:
-        other: "#PAGES_COUNT 个结果 （用时 #TIME_SECONDS 秒）"
+        other: "找到 #PAGES_COUNT 个结果"
 
 footer:
     builtWith:
